[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/ICONES_DE_JOGABILIDADE/APENAS-O-SIFRAO.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Sell_item.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.266667, 0.0901961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0235294, 0.176471, 0.0352941, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.443137, 0.101961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0235294, 0.176471, 0.0352941, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Sell_item" type="GridContainer"]
margin_right = 384.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( -504, -48 )
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer2" type="GridContainer" parent="."]
margin_right = 384.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
columns = 4

[node name="Label" type="Label" parent="GridContainer2"]
margin_top = 8.0
margin_right = 93.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Plant"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GridContainer2"]
margin_left = 97.0
margin_top = 8.0
margin_right = 190.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Season"
align = 1
valign = 1

[node name="Label3" type="Label" parent="GridContainer2"]
margin_left = 194.0
margin_top = 8.0
margin_right = 287.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
align = 1
valign = 1

[node name="Label4" type="Label" parent="GridContainer2"]
margin_left = 291.0
margin_top = 8.0
margin_right = 384.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Value"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 34.0
margin_right = 384.0
margin_bottom = 82.0
size_flags_horizontal = 3
columns = 4

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
margin_left = 30.0
margin_right = 78.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 6
expand = true

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
margin_left = 112.0
margin_right = 160.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
expand = true

[node name="TextureRect" type="TextureRect" parent="GridContainer"]
margin_left = 247.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 40.0
rect_min_size = Vector2( 25, 32 )
size_flags_horizontal = 10
size_flags_vertical = 6
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="GridContainer"]
modulate = Color( 0, 1, 0.0862745, 1 )
margin_left = 276.0
margin_top = 17.0
margin_right = 384.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "300"
align = 1

[node name="HSlider" type="HSlider" parent="."]
margin_top = 86.0
margin_right = 384.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )

[node name="Button" type="Button" parent="."]
margin_top = 120.0
margin_right = 384.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 30 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "SELL"

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
